vr on mobile bug fix:

--- a/frontend/src/components/vr/VR.css
+++ b/frontend/src/components/vr/VR.css
@@ -13,7 +13,4 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .vr-screen {
-    width: 2000px;
-  }
 }
